MELOSYS 5593 endring foerstegangsbehandling (#1600)
* Ikke endre behandlingstype til førstegang etter første behandling
* Bruk aktivBehandling for validering av endring (ikke journalføring)